Fix: Flicker with different themes on load.

--- a/src/App.css
+++ b/src/App.css
@@ -50,17 +50,6 @@
   }
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    --background-color: #e6e6e6;
-  }
-}
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background-color: #3a4663;
-  }
-}
-
 body {
   margin: 0;
   background-color: var(--background-color);
